# parallel

./: CMakeLists.txt  helper.h  main.cpp  matrix-multiplication-mpi-vs.sln
matrix/: Matrix.cpp  Matrix.h
matrix-multiplication-mpi-vs/: main.cpp  matrix-multiplication-mpi-vs.vcxproj  matrix-multiplication-mpi-vs.vcxproj.filters
matrix-multiplication-mpi-vs/matrix/: matrix.cpp
